--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -322,7 +322,7 @@
 }
 
 %% Ralph's margin notes:  \rsf{this is a note}
-\newcommandx{\rf}[2][1=]{
+\newcommandx{\rsf}[2][1=]{
   \todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]%
        {{\bf rsf} \today: #2}
 }
