fix typos and clean up some sections; add context Γ to four lemmas.

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -241,11 +241,14 @@
 %% \aclu{CSP} -- Prints the long form of the acronym and marks it as used.\\
 
 \acrodef{ld}[LD]{local difference}
+\acrodef{ldt}[LDT]{local difference term}
 \newcommand{\ld}{\acs{ld}\xspace}
+\newcommand{\ldto}{\acs{ldt} operation\xspace}
+\newcommand{\ldtos}{\acs{ldt} operations\xspace}
 \acrodef{ild}[ILD]{inductive local difference}
 \newcommand{\ild}{\acs{ild}\xspace}
-\newcommand{\ldt}{\ld term\xspace}
-\newcommand{\ldto}{\ldt operation\xspace}
+%%\newcommand{\ldt}{\ld term\xspace}
+%%\newcommand{\ldto}{\ldt operation\xspace}
 
 \acrodef{sat}[SAT]{satisfiability}
 \newcommand{\sat}{\acs{sat}\xspace}
