correct two typing errors

--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -946,9 +946,9 @@ modular variety is tractable.%
 %$C, n$, and an algorithm that takes
 %a finite idempotent algebra $\alg{A}$ as input and decides
 %in at most $C|\alg{A}|^n$ steps whether $\bbV(\alg{A})$ is congruence modular.
-%Here $|\alg{A}|$ denotes the number of bits required to encode 
+%Here $|\alg{A}|$ denotes the number of bits required to encode
 %the algebra $\alg{A}$.}
-% polynomial-time algorithm to decide, 
+% polynomial-time algorithm to decide,
 %for a finite idempotent algebra $\alg{A}$,
 % whether $\bbV(\alg{A})$ is congruence modular.}
 
@@ -1209,7 +1209,7 @@ this completes the proof.
 
 \begin{lemma}[{\protect cf.~\cite[Lemma~3.3]{Freese:2009}}]\
   \label{lem:fv_3-3}
-  Assume $\Gamma$. 
+  Assume $\Gamma$.
   \begin{enumerate}[(i)]
     \item \label{item:6} There exists $i$
       such that $\alpha \join \rho_i = 1_B$
@@ -1309,7 +1309,7 @@ So, the minimality of $n$ forces $n\le 2$ and the result follows.
 
 %\mav{Improve Ex 9 (see comment below)}
 \begin{example}\label{alg:nodiff}
-%Let $\alg{A}$ be the algebra with universe $\{0,1,2\}$ that has the ternary idempotent operation $f(x,y,z)$ such that on $\{0,1\}$ $f(x,y,z) = x \oplus y \oplus z$, on $\{0,2\}$, $f(x,y,z) = \min\{x,y,z\}$ and is equal to 0 otherwise.  Then $f$ is a cyclic operation and so $\alg{A}$ generates a variety that omits type~\utyp.  
+%Let $\alg{A}$ be the algebra with universe $\{0,1,2\}$ that has the ternary idempotent operation $f(x,y,z)$ such that on $\{0,1\}$ $f(x,y,z) = x \oplus y \oplus z$, on $\{0,2\}$, $f(x,y,z) = \min\{x,y,z\}$ and is equal to 0 otherwise.  Then $f$ is a cyclic operation and so $\alg{A}$ generates a variety that omits type~\utyp.
 Let $\alg A$ be the (idempotent) algebra with universe $\{0,1,2, 3\}$ with basic operation $x\cdot y$ defined by:
   \[
   \begin{array}{c|cccc}
@@ -1641,7 +1641,7 @@ $rm^4 + n(n^4 + rm) = rm^4 + n^5 + nrm$.
 But since the commutator is trivial in unary algebras, we may
 assume $m \ge n^2$, and thus the time is bounded by a
 constant times $rm^4$, proving the first part of~\eqref{speed3}.
-This procedure for calculating the commutator is part 
+This procedure for calculating the commutator is part
 of Ross Willard's thesis~\cite{MR2637477}.
 
 To see the other part,
@@ -1870,7 +1870,7 @@ write ``\ldto'' as shorthand for
 ``local difference term operation.''
 
 Often we will take $S$ to be a finite list of elements of
-$A \times \{0,1\}$, and $|S|$ will denote the length of
+$A^2 \times \{0,1\}$, and $|S|$ will denote the length of
 the list. The definition above of a \ldto for
 a set has an obvious analog for a list.
 
@@ -1983,7 +1983,7 @@ $\com{\gamman} \leq \com{\thetan}$.
 It follows from this and (\ref{eq:100000}) that
 $a_n \comr{\thetan} d(a_n,b_n,b_n)$, as desired.
 
-For indices $i < k$, we have $\chi_i =1$, so 
+For indices $i < k$, we have $\chi_i =1$, so
 $d(a_i,a_i,b_i) = b_i$ for such $i$. Indeed,
 \[
   d(a_i,a_i,b_i) =
@@ -2022,7 +2022,7 @@ Without loss of generality, suppose
   \quad \text{and} \quad
 \chi_{k} = \cdots = \chi_{n} = 1.
 \end{equation*}
-If 
+If
 %% \begin{equation*}
 $S_1 := \{(a_0, b_0, 0), (a_1, b_1 0), \dots, (a_{k-1}, b_{k-1}, 0),
         (p(a_n, a_n, b_n), b_n, 1)\}$,\\[3pt]
@@ -2148,7 +2148,7 @@ Here are some practical consequences of Theorem~\ref{thm:local-diff-terms}.
   We can rewrite this condition more compactly by noting that
   \[t^{\alg{A} \times \alg{A} }((a,a'), (b,a'), (b,b')) =
   (t^{\alg A }(a,b,b),t^{\alg A }(a',a',b')),\]
-  and that 
+  and that
   $t \in \dtr \{(a,b,0), (a',b',1)\}$ if and only if
   \[
   t^{\alg A \times \alg A }((a,a'), (b,a'), (b,b'))\in a/\delta \times \{b'\},
@@ -2201,7 +2201,7 @@ The following proposition provides another avenue for constructing a polynomial-
 \begin{proof}
   Of course if $\bbV (\alg A)$ has a difference term then each 3-generated subalgebra of $\alg A^2$ has a difference term operation. For the converse, we refer to the proof of Theorem~\ref{thm:KearnesThm}~\cite[Theorem 3.8]{MR1358491}.  One part of this theorem establishes that if an algebra $\alg B$ is in a variety that has a difference term, then all type~\atyp minimal sets of $\alg B$ have empty tails.  A careful reading of the proof of this fact shows that a weaker hypothesis will suffice, namely that all quotients of $\alg B$ have difference term operations.  This is equivalent to just $\alg B$ having a difference term operation, since this property is preserved under taking quotients.
   \mav{This is true, I think.  Should it be mentioned somewhere, as part of a general discussion of difference term operations?}
-  
+
   To complete the proof of this proposition, we use Corollary~\ref{cor:diffterm}. Suppose that each 3-generated subalgebra of $\alg A^2$ has a difference term operation.  Then, in particular, each 2-generated subalgebra of $\alg A$ does.  This rules out that $\sansH \sansS (\alg{A})$ contains an algebra that is term equivalent to the 2-element set.  It also follows, from the previous paragraph, that no 3-generated subalgebra of $\alg A^2$ has a prime quotient of type~\atyp whose minimal sets have nonempty tails.
 \end{proof}
 
@@ -2294,7 +2294,7 @@ the result is a stream of \ldtos.  This would be sufficient if our goal were mer
 to decide whether a difference term exists.  However, the algorithm calls for
 returning a term $t$, or at least the operation table for $t$.
 
-Therefore, we implement Algrithm~\ref{alg:ld-2} as follows: first compute
+Therefore, we implement Algorithm~\ref{alg:ld-2} as follows: first compute
 $\delta_0 = \com{ \thetao }$ and form $C_0= (a_0/\delta_0) \times \{b_1\}$;
 then generate $S_0$ and, at every stage,
 (temporarily) store the term tree for each newly generated element of $S_0$;
@@ -2335,7 +2335,7 @@ Here are some notational conventions we use in this section.
 \sA_1 &:= \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0)\},\\
 \sA_2 &:= \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), (a_1,b_1,1)\},\dots
 \end{align*}
-For $k > 0$, 
+For $k > 0$,
 %&\vdots\\
 $\sA_{2k} := \sA_{2k-1} \cup \{(a_k,b_k,1)\}$,
 %\{(a_0, b_0, 0), (a_0, b_0, 1), \dots, (a_k,b_k,0), (a_k,b_k,1)\}.
