--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1515,7 +1515,7 @@ $x_0$, $y_0$, $x_1$ and $y_1$ witness that~(\ref{it:3}) fails.
 
 
 \section{The Algorithm and its Time Complexity}
-
+\label{sec:algorithm-its-time}
 If $\alg A$ is an algebra with underlying set (or universe) $A$,
 we let $|\alg A| = |A|$ be the cardinality of
 $A$ and $||\alg A||$ be the \emph{input size}; that is,
@@ -2016,7 +2016,7 @@ $a_j = q(a_j,a_j,a_j) \comr{\thetaj} d(a_j, b_j,b_j)$.
 \medskip
 %--------------------------------------
 \noindent \underline{Case $\chi_n = 1$}:
-Without loss of generality, suppose
+Without loss of generality, assume
 \begin{equation*}
   \chi_0 =\cdots =\chi_{k-1} = 0
   \quad \text{and} \quad
@@ -2223,22 +2223,14 @@ describe an algorithm for constructing a difference term operation
 
 \mav{It is the case that we can construct an operation table for a difference term operation in poly-time.  I think that we can essentially follow the steps from this subsection, but rather than recording the terms at each step, we record the tables for the corresponding operations.  Should we mention this?}
 
-We build up the algorithm in stages. Section~\ref{sec:size2}
-gives a procedure (Algorithm~\ref{alg:ld-2}) for finding a \ldto for sets
-of size 2, and Section~\ref{sec:induct} gives two inductive steps
-(Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2})
-for producing \ldtos on successively larger subsets of $A^2 \times \{0,1\}$.
-% Our main recursive algorithm for constructing a difference term
-% operation for $\alg A$ appears in Subsection~\ref{sec:algor-2}.
+We present the algorithm in stages. 
+Algorithm~\ref{alg:ld-2} gives a procedure for finding a \ldto for sets
+of size 2, and Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}
+alternate and produce \ldtos for successively larger subsets of $A^2 \times \{0,1\}$.
 
-\subsubsection{Base case}
-\label{sec:size2}
-a \ldto for
-$((a_0,b_0,0), (a_1, b_1, 0))$ is the first projection,
-$t(x,y,z) = x$.
-a \ldto for
-the set $((a_0,b_0,1), (a_1, b_1, 1))$ is the third projection,
-$t(x,y,z) = z$.
+To begin, note that the first and third projections, $t(x,y,z) = x$ and  $t(x,y,z) = z$, are
+\ldtos for the sets $\{(a_0,b_0,1), (a_1, b_1, 1)\}$ and $\{(a_0,b_0,0), (a_1, b_1, 0)\}$,
+respectively.
 \begin{comment}
 \footnote{Moreover, if $a_0 = b_0$, then by idempotence every ternary term $t$
 satisfies $t(a_0, b_0, b_0) = a_0$; therefore, the third projection is a \ld
@@ -2252,9 +2244,8 @@ We have relegated this observation to a footnote because it yields a
 computational that does not impact the overall complexity of the main
 algorithm.}
 \end{comment}
-
 The remaining sets of size 2 have the form
-$((a_0,b_0,0), (a_1, b_1, 1))$, and
+$\{(a_0,b_0,0), (a_1, b_1, 1)\}$, and
 a \ldto for such sets can be computed by
 Algorithm~\ref{alg:ld-2}, as described in the box below.
 % (In the following algorithm descriptions,
@@ -2268,9 +2259,9 @@ Algorithm~\ref{alg:ld-2}, as described in the box below.
   \SetKwInOut{Input}{Input}
   \SetKwInOut{Output}{Output}
 
-  \caption{Return a \ldto for $((a_0,b_0,0), (a_1, b_1, 1))$ \label{alg:ld-2}  }
-  \Input{$S = ((a_0,b_0,0), (a_1, b_1, 1))$}
-  \Output{$t \in \dtr S$}
+  \caption{Return the table of a \ldto for $\{(a_0,b_0,0), (a_1, b_1, 1)\}$ \label{alg:ld-2}  }
+  \Input{$S = \{(a_0,b_0,0), (a_1, b_1, 1)\}$}
+  \Output{operation table for $t \in \dtr S$}
 
   compute $\delta_0 = \com{ \theta_0 }$ and form $C_0= (a_0/\delta_0) \times \{b_1\}$;
 
@@ -2281,8 +2272,9 @@ Algorithm~\ref{alg:ld-2}, as described in the box below.
   $(t^{\alg{A}}(a_0,b_0,b_0), t^{\alg{A}}(a_1,a_1,b_1)) \in C_0 \cap S_0$;
 %\end{equation*}
 
-return $t$
+return the operation table for $t$
 \end{algorithm}
+\begin{comment}
 In practice, there are a number of different ways we could structure this
 algorithm when implementing it in software. In principle, the ordering of the
 first two steps is inconsequential.
@@ -2292,17 +2284,74 @@ as a stream $S_0$, then compute $\delta_0 = \com{ \thetao }$, and finally
 filter $S_0$ against the predicate $s \in (a_0/\delta_0) \times \{b_1\}$;
 the result is a stream of \ldtos.  This would be sufficient if our goal were merely
 to decide whether a difference term exists.  However, the algorithm calls for
-returning a term $t$, or at least the operation table for $t$.
+returning the table of a \ldto $t$.
+Therefore,
+\end{comment}
+We now discuss the implementation details and computational cost of
+Algorithm~\ref{alg:ld-2}, using the notation introduced in
+Section~\ref{sec:algorithm-its-time}.  Recall,
+$n = |A|$, and $m=\|\alg A\| = \sum_{i=0}^r k_i n^i$,
+where $k_i$ is the number of basic operations of arity~$i$, and $r$
+is the largest arity of the basic operations of $\alg{A}$.
+The complexity bounds in this section are easily derivable 
+from Proposition~\ref{speedprop}.
 
-Therefore, we implement Algorithm~\ref{alg:ld-2} as follows: first compute
-$\delta_0 = \com{ \thetao }$ and form $C_0= (a_0/\delta_0) \times \{b_1\}$;
-then generate $S_0$ and, at every stage,
-(temporarily) store the term tree for each newly generated element of $S_0$;
-if an element of $S_0$ belongs to $C_0$, then the term tree that produced the
-element is a \ldto for $S_0$; in that case, compute and return the operation
-table of this term (without necessarily computing all of $S_0$).
-If a newly generated element of $S_0$ does not belong to $C_0$, then
-(discard the term tree and) continue generating $S_0$.
+Algorithm~\ref{alg:ld-2} could be implemented as follows:
+\begin{enumerate}
+\item compute $\thetao$, in time $crm$;
+\item compute $C_0= a_0/\com{ \thetao } \times \{b_1\}$,
+in time $c(rm^2 + n^5)$;
+\item generate $S_0$, %a subuniverse of $\alg{A}\times \alg{A}$,
+  in time $c r m^2$;
+  \begin{enumerate}
+  \item for each new element of $S_0$, compute the full
+    table of the operation that produced it;
+  \item if $(u,v) \in C_0$, then return the operation table from (3a);
+    else, cache the table and continue generating $S_0$.
+  \end{enumerate}
+\end{enumerate}
+
+%% (There are at most $|A|^2$ ($\geq |S_0|$) such tables, and,
+%% (Since the operations are ternary, each table has size $|A|^3$, so
+%% the cost of storing a table at each step is $n^3$.) 
+Each element $(u,v)\in S_0$ is the result of applying some (say, $k$-ary)
+basic operation $f$ to previously generated pairs $(u_1, v_1)$, $\dots$, $(u_k,v_k)$
+from $S_0$, and the operation tables producing these pairs were
+already stored (at Step (3a)).  Thus, to compute the table
+for the operation that produced $(u,v) = f((u_1,v_1),\dots, (u_k,v_k))$
+we simply compose $f$ with previously stored operation tables.
+Since all tables represent ternary operations, the time-complexity of this composition
+is $|A|^3$-steps multiplied by $k$ reads per step; that is,
+$kn^3 \leq rn^3$.
+
+All told, the computational complexity of a single run of
+Algorithm~\ref{alg:ld-2} is at most $crm + c(rm^2 + n^5) + c r^2m^2n^3$.
+We only need to run the algorithm once since, as soon as a \ldto is found for
+a single (arbitrary) triple of the form $((a,a'),(b,a'),(b,b'))$,
+we move on to Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}
+(below).
+
+
+(An equivalent approach, that may be easier to implement in software is
+to partially produce the subalgebra of $\alg{A}^{\alg{A}^3}$ generated by
+the three $|A|^3$-tuples
+$g_0 = (a_0, a_1, \dots)$,
+$g_1 = (b_0, a_1, \dots)$,
+$g_2 = (b_0, b_1, \dots)$,
+each of which is extended so that every 
+triple from $A^3$ is represented as $(g_0(i), g_1(i), g_2(i))$ for some 
+unique $i$.  Producing the entire subuniverse will be expensive in 
+general, but we only need to pay attention to the first two coordinates. 
+At each step, we check for a tuple $u = (u_0, u_1, u_2, \dots)$ such that
+$(u_0, u_1)\in C_0 \cap S_0$.  If we find one, then the entire tuple $u$ stores
+the table for a \ldto for $((a_0, b_0, 0), (a_1, b_1, 1))$ and we can stop.
+At the end of each of these closure steps, we check for 
+tuples $v = (v_0, v_1, \dots)$ for which the pair $(v_0, v_1)$ has not
+yet appeared.  If no new pairs of this form are found, the algorithm halts
+and we conclude that no \ldto exists for this pair.  The runtime of this
+procedure is bounded by $|A|^2$.)
+
+
 
 \begin{comment}
 \noindent \underline{\textbf{Subroutine \ld-2'}}\\[4pt]
@@ -2326,21 +2375,16 @@ Then $t$ is a \ldto for
 $((a_0, b_0, 1), (a_1, b_1, 0))$.
 \end{comment}
 
-
-\subsubsection{Induction step}
-\label{sec:induct}
-Here are some notational conventions we use in this section.
-\begin{align*}
-\sA_0 &:= \{(a_0, b_0, 0), (a_0, b_0, 1)\},\\
-\sA_1 &:= \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0)\},\\
-\sA_2 &:= \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), (a_1,b_1,1)\},\dots
-\end{align*}
-For $k > 0$,
-%&\vdots\\
-$\sA_{2k} := \sA_{2k-1} \cup \{(a_k,b_k,1)\}$,
-%\{(a_0, b_0, 0), (a_0, b_0, 1), \dots, (a_k,b_k,0), (a_k,b_k,1)\}.
-%$\sA_{2k} := \sA_{2k-1} \cup \{(a_k,b_k,1)\}$ and
-$\sA_{2k+1} := \sA_{2k} \cup \{(a_{k+1},b_{k+1},0)\}$.
+We are now ready to describe the inductive stages of our algorithm,
+for which the following notation is useful:
+%% \begin{align*}
+%% \sA_0 &:= \{(a_0, b_0, 0), (a_0, b_0, 1)\},\\
+%% \sA_1 &:= \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0)\},\\
+%% \sA_2 &:= \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), (a_1,b_1,1)\},\dots
+%% \end{align*}
+$\sA_0 := \{(a_0, b_0, 0), (a_0, b_0, 1)\}$, $\sA_1 := \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0)\}$;
+%$\sA_2 := \{(a_0, b_0, 0), (a_0, b_0, 1), (a_1,b_1,0), (a_1,b_1,1)\}$, $\dots$,
+for $k > 0$, $\sA_{2k} := \sA_{2k-1} \cup \{(a_k,b_k,1)\}$  and $\sA_{2k+1} := \sA_{2k} \cup \{(a_{k+1},b_{k+1},0)\}$.
 For $i\geq 0$,
 \begin{align*}
 \zeta_i &:= \dtr \{(a_i, b_i, 0)\}, \\
@@ -2352,19 +2396,21 @@ For $i\geq 0$,
 \end{align*}
 
 Algorithm~\ref{alg:ld-2} serves as a base case, giving a \ldto for
-$\sA_0$ that we will use as input to Algorithm~\ref{alg:stream-ldt1}, the output of which is a \ldto for $\sA_1$.
+$\sA_0$ that we will use as input to Algorithm~\ref{alg:stream-ldt1},
+the output of which is a \ldto for $\sA_1$.
 That output will serve in turn as input to
 Algorithm~\ref{alg:stream-ldt2} the result of which is
-a \ldto for $\sA_2$.  Thereafter, this process alternates between Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}.
+a \ldto for $\sA_2$.
+Thereafter, this process alternates between
+Algorithms~\ref{alg:stream-ldt1} and~\ref{alg:stream-ldt2}.
 Inductively, we obtain a single \ldto for all of $A^2 \times \{0,1\}$,
 which is a difference term operation for $\alg A$.
 
 \RestyleAlgo{boxruled}
 \LinesNumbered
-\begin{algorithm}%[ht]
+\begin{algorithm}
   \SetKwInOut{Input}{Input}
   \SetKwInOut{Output}{Output}
-
   \caption{Return \ldto for $\sA_{2k+1}$, given
   $\eta_{\kk}$ and \ldto for $\sA_{2k}$.
   \label{alg:stream-ldt1}  }
@@ -2385,10 +2431,9 @@ which is a difference term operation for $\alg A$.
 
 \RestyleAlgo{boxruled}
 \LinesNumbered
-\begin{algorithm}%[ht]
+\begin{algorithm}
   \SetKwInOut{Input}{Input}
   \SetKwInOut{Output}{Output}
-
   \caption{Return a \ldto for $\sA_{2k}$ given $\zeta_{\kk}$ and
   a \ldto for $\sA_{2k-1}$.
   \label{alg:stream-ldt2}  }
